# ai-librarian

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  README.org  pyproject.toml  requirements.txt
ai_librarian/: __init__.py  __main__.py  base.py  book_keeper.py  cli.py  const.py  doc_store.py  embedder.py  indexer.py  librarian.py  library.py  loader.py  main.py  record_keeper.py  retriever.py  util.py  web.py
src/: base.py  chroma.py  index.py  loader.py  main.py  openai.py  retriever.py  vec_store.py
src/ai-librarian/: __main__.py  doc_store.py  embedder.py  librarian.py  retriever.py
web/: .proxyrc.json  api.tsx  data.tsx  index.html  package-lock.json  package.json  script.tsx  style.css  tsconfig.json  types.ts
web/public/: index.html  style.css
web/src/: api.tsx  app.tsx  ask_bar.tsx  book_list.tsx  chat_window.tsx  history.tsx  script.tsx  types.ts  util.tsx
