[project]
name = "ai-librarian"
version = "0.1.0"
authors = [
  { name = "Shou Ya", email = "shouya@users.noreply.github.com" }
]
description = "Ask question about your books"
license = { file = "COPYING" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
]

[project.urls]
homepage = "https://github.com/shouya/ai-librarian"

[project.scripts]
ai-librarian = "ai_librarian:cli"


[tool.black]
line-length = 75
