[tool.black]
line-length = 75

[tool.poetry]
name = "ai-librarian"
version = "0.1.0"
description = "Ask questions about your books"
authors = ["Shou Ya <shouya@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "ai_librarian"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
langchain = { version = "==0.0.157", extras = ["openai"] }
openai = "*"
chromadb = { git = "https://github.com/chroma-core/chroma.git", branch = "main" }
lancedb = "*"
epub_meta = "*"
ebooklib = "*"
beautifulsoup4 = "*"
pydantic-numpy = "*"
click = "*"
Flask = "*"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
